--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,7 +15,7 @@ body{
     justify-content: center;
 }
 
-#sis-radial-container{
+.sis-container{
     display: flex;
     flex-flow: wrap;
     align-items: center;
